--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -404,7 +404,7 @@
 </div>
 
 <div class="modal fade" id="modalproduct">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">Productos</h4>
@@ -431,7 +431,7 @@
                   </div>
                   <div class="col-2">
                     <label>Cantidad</label>
-                    <input type="number" " min="1" max="{{articulo.existencia}}" ng-model="articulo.CANTIDAD" class="form-control" placeholder="cantidad" onkeypress='return event.charCode >= 48 && event.charCode <= 57' >
+                    <input type="number"  min="1" max="{{articulo.existencia}}" ng-model="articulo.CANTIDAD" class="form-control" placeholder="cantidad" onkeypress='return event.charCode >= 48 && event.charCode <= 57' >
                   </div>
                   <div class="col-2">
                     <label>Existencia</label>
@@ -467,8 +467,7 @@
               </thead>
               <tbody>
 
-                  <tr ng-repeat="x in productos">
-                    <div class="" ng-click="selectProduct($index)" >
+                  <tr ng-repeat="x in productos" ng-click="selectProduct($index)" >
                       <td><p class="text-center">{{ x.nombre_producto }}</p></td>
                       <td><p class="text-center">{{ x.existencia }}</p></td>
                       <td><p class="text-center">{{ x.princ_activo }}</p></td>
@@ -476,7 +475,7 @@
 
                     </div>
 
-                    </tr>
+                  </tr>
               </tbody>
               </table>
 
