--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -457,7 +457,7 @@
             <table class="table" >
               <thead>
                   <tr>
-
+                  <th scope="col"><p class="text-center">#</p></th>
                   <th scope="col"><p class="text-center">Nombre Producto</p></th>
                   <th scope="col"><p class="text-center">Existencia</p></th>
                   <th scope="col"><p class="text-center">Principio Activo</p></th>
@@ -468,12 +468,11 @@
               <tbody>
 
                   <tr ng-repeat="x in productos" ng-click="selectProduct($index)" ng-class="{ selectedRow : $index == productIndex }" >
+                      <td><p class="text-center">{{ $index + 1 }}</p></td>
                       <td><p class="text-center">{{ x.nombre_producto }}</p></td>
                       <td><p class="text-center">{{ x.existencia }}</p></td>
                       <td><p class="text-center">{{ x.princ_activo }}</p></td>
                       <td><p class="text-right">{{ formato(2,x.precio) }}</p></td>
-
-                    </div>
 
                   </tr>
               </tbody>
