--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -454,7 +454,7 @@
 
               </div>
 
-            <table class="table" >
+            <table datatable="" dt-options="dtOptionsProd"  dt-instance="dtInstanceProd" class="table table-striped table-bordered" >
               <thead>
                   <tr>
                   <th scope="col"><p class="text-center">#</p></th>
