--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -418,7 +418,7 @@
             <div class="col-sm-12 col-md-12 col-lg-12">
               <label for="clientes">Busqueda por producto</label>
               <div class="input-group mb-3">
-                <input type="text" class="form-control"  ng-keyup="getProdNew(true)" ng-model="busqueda_prod" placeholder="Busqueda por Producto" aria-label="Busqueda por Producto" aria-describedby="basic-addon2">
+                <input type="text" class="form-control"  ng-keyup="dtInstanceProd.changeData(newPromise)" ng-model="busqueda_prod" placeholder="Busqueda por Producto" aria-label="Busqueda por Producto" aria-describedby="basic-addon2">
                 <div class="input-group-append">
                   <button class="btn btn-outline-secondary"   ng-click="getProdNew(true)" type="button">Buscar</button>
                 </div>
