--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -453,7 +453,7 @@
                   </div>
 
               </div>
-              <div ng-if="client" >
+              <div ng-if="showProductTable" >
                 <table datatable="" dt-options="dtOptionsProd"  dt-instance="dtInstanceProd" class="table table-striped table-bordered" >
                   <thead>
                       <tr>
