--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -420,7 +420,7 @@
               <div class="input-group mb-3">
                 <input type="text" class="form-control"   ng-model="busqueda_prod" placeholder="Busqueda por Producto" aria-label="Busqueda por Producto" aria-describedby="basic-addon2">
                 <div class="input-group-append">
-                  <button class="btn btn-outline-secondary"   ng-click="dtInstanceProd.changeData(newPromise)" type="button">Buscar</button>
+                  <button class="btn btn-outline-secondary"   ng-click="getProdNew(true)" type="button">Buscar</button>
                 </div>
               </div>
               <div class="row" >
