--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="modal fade" id="addPedidoModal" tabindex="-1" role="dialog" aria-labelledby="addPedidoModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
+  <div class="modal-dialog modal-xl" role="document">
     <div class="modal-content">
       <div class="modal-header" style="background: #399CDF;color: white; font-weight: bold;">
         <h5 class="modal-title" id="addPedidoModalLabel">CREAR PEDIDO <i class="fas fa-1x fa-list-alt"></i></h5>
@@ -213,7 +213,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="showPedidoModal" tabindex="-1" role="dialog" aria-labelledby="showPedidoModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
+  <div class="modal-dialog modal-xl" role="document">
     <div class="modal-content">
       <div class="modal-header" style="background: #399CDF;color: white; font-weight: bold;">
         <h5 class="modal-title" id="addPedidoModalLabel">VER PEDIDO <i class="fas fa-1x fa-list-alt"></i></h5>
@@ -232,7 +232,7 @@
 
             <div ng-show="!hasUserClient">
 
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="form-group">
                   <label>No_cia</label>
@@ -252,6 +252,22 @@
                 </div>
               </div>
 
+            </div> -->
+            <div class="row pb-2 p-2" ng-if="client">
+                <div class="col-md-6">
+                    <p class="font-weight-bold mb-4">Informacion del Cliente </p>
+                    <p class="mb-1" style="text-transform: capitalize;" >{{client.nombre_cliente.toLowerCase()}}</p>
+                    <!-- <p>Acme Inc</p> -->
+                    <p class="mb-1">{{client.direccion_cliente.toLowerCase()}}</p>
+                    <!-- <p class="mb-1">6781 45P</p> -->
+                </div>
+
+                <div class="col-md-6 text-right">
+                    <p class="font-weight-bold mb-4">Detalles</p>
+                    <p class="mb-1"><span class="text-muted">Identificacion: </span> {{client.docu_identif_cliente}}</p>
+                    <p class="mb-1"><span class="text-muted">Codigo: </span> {{pedido.no_cliente}}</p>
+                    <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client.nombre_encargado.toLowerCase()}}</p>
+                </div>
             </div>
             </div>
 
@@ -443,7 +459,7 @@
 
                   </div>
                   <div class="col-3">
-                    <label>Precio producto total</label>
+                    <label>Precio total</label>
                     <span >{{formato(2,(articulo.PRECIO)? (articulo.PRECIO  * articulo.CANTIDAD):0)}}</span>
 
                   </div>
