--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -43,27 +43,22 @@
                   </div>
                 </div>
 
-              <div class="row">
-                <div class="col-sm-12 col-md-4 col-lg-4">
-                  <div class="form-group">
-                    <label>No_cia</label>
-                    <input type="text" ng-disabled="true" ng-model="pedido.no_cia" class="form-control" placeholder="no_cia">
-                  </div>
-                </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
-                  <div class="form-group">
-                    <label>Grupo</label>
-                    <input type="text"  ng-disabled="true" ng-model="pedido.grupo" class="form-control" placeholder="Grupo">
-                  </div>
-                </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
-                  <div class="form-group">
-                    <label>Cliente</label>
-                    <input type="text" ng-disabled="true"  ng-model="pedido.no_cliente" class="form-control" placeholder="no_cliente">
-                  </div>
-                </div>
+                <div class="row pb-2 p-2" ng-if="clientIndex != -1">
+                    <div class="col-md-6">
+                        <p class="font-weight-bold mb-4">Informacion del Cliente </p>
+                        <p class="mb-1" style="text-transform: capitalize;" >{{client.nombre_cliente.toLowerCase()}}</p>
+                        <!-- <p>Acme Inc</p> -->
+                        <p class="mb-1">{{client.direccion_cliente.toLowerCase()}}</p>
+                        <!-- <p class="mb-1">6781 45P</p> -->
+                    </div>
 
-              </div>
+                    <div class="col-md-6 text-right">
+                        <p class="font-weight-bold mb-4">Detalles</p>
+                        <p class="mb-1"><span class="text-muted">Identificacion: </span> {{client.docu_identif_cliente}}</p>
+                        <p class="mb-1"><span class="text-muted">Codigo: </span> {{pedido.no_cliente}}</p>
+                        <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client.nombre_encargado.toLowerCase()}}</p>
+                    </div>
+                </div>
               </div>
 
             <div class="row">
