--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -436,7 +436,7 @@
                           <td><p class="text-center">{{ x.nombre_producto }}</p></td>
                           <td><p class="text-center">{{ x.existencia }}</p></td>
                           <td><p class="text-center">{{ x.princ_activo }}</p></td>
-                          <td><p class="text-right">{{ formato(2, x.precio ) }}</p></td>
+                          <td><p class="text-right">{{  x.precioFormat }}</p></td>
                       </tr>
 
                   </tbody>
