--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -15,7 +15,7 @@
         <!-- INFO CLIENTE -->
         <header-client></header-client>
         <!--  END INFO CLIENTE -->
-        <div class="row">
+        <div class="row col-sm-12 col-md-12 col-lg-12">
 
           <form>
 
