--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -102,8 +102,11 @@
     </div>
 
   </div>
-  <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" dt-instance="dtInstance" class="table table-striped table-bordered">
-  </table>
+  <div ng-if="clientIndex != -1" >
+    <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" dt-instance="dtInstance" class="table table-striped table-bordered">
+    </table>
+
+  </div>
 
 
       </div>
