--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -17,7 +17,7 @@
         <!--  END INFO CLIENTE -->
         <div class="row col-sm-12 col-md-12 col-lg-12">
 
-          <form>
+          <form class="row col-sm-12 col-md-12 col-lg-12" >
 
             <div class="container">
 
