--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -49,7 +49,7 @@
                         <p class="mb-1" style="text-transform: capitalize;" >{{client.nombre_cliente.toLowerCase()}}</p>
                         <p>{{client.telefono1}}</p>
                         <p class="mb-1">{{client.direccion_cliente.toLowerCase()}}</p>
-                        <p class="mb-1"><span class="text-muted">Plazo: </span> {{client.v_plazo}}</p>
+                        <!-- <p class="mb-1"><span class="text-muted">Plazo: </span> {{client.v_plazo}}</p> -->
                     </div>
 
                     <div class="col-md-6 text-right">
@@ -57,7 +57,7 @@
                         <p class="mb-1"><span class="text-muted">Identificacion: </span> {{client.docu_identif_cliente}}</p>
                         <p class="mb-1"><span class="text-muted">Codigo: </span> {{pedido.no_cliente}}</p>
                         <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client.nombre_encargado.toLowerCase()}}</p>
-                        <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">persona contacto área crédito y cobranzas: </span> {{client.nombre_encargado.toLowerCase()}}</p>
+                        <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">persona contacto área crédito y cobranzas: </span> {{client.v_persona_cyc.toLowerCase()}}</p>
                     </div>
                 </div>
               </div>
