--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -204,7 +204,7 @@
 
             <div ng-show="!hasUserClient">
 
-              <div class="row pb-2 p-2" ng-if="clientIndex != -1">
+              <div class="row pb-2 p-2" >
                   <div class="col-md-6">
                       <p class="font-weight-bold mb-4">Informacion del Cliente </p>
                       <p class="mb-1" style="text-transform: capitalize;" >{{client.nombre_cliente.toLowerCase()}}</p>
