--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -361,34 +361,34 @@
                     <input type="text"ng-disabled="true" ng-model="articulo.existencia" class="form-control" placeholder="existencia">
                   </div>
                   <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="mt-3 col-sm-12 col-md-12 col-lg-12">
 
                       <label>Precios</label>
                     </div>
                     <div class="col-3">
-                      <label>Por unidad Bs.S</label>
+                      <label>Por unidad Bs.S</label><br>
                       <span >{{formato(2,(articulo.PRECIO)? articulo.PRECIO:0)}}</span>
 
                     </div>
                     <div class="col-3">
-                      <label>Total Bs.S</label>
+                      <label>Total Bs.S</label><br>
                       <span >{{formato(2,(articulo.PRECIO)? (articulo.PRECIO  * articulo.CANTIDAD):0)}}</span>
 
                     </div>
                     <div class="col-3">
-                      <label>Por unidad USD</label>
+                      <label>Por unidad USD</label><br>
                       <span >{{formato(2,(articulo.precio_usd)? articulo.precio_usd:0)}}</span>
 
                     </div>
                     <div class="col-3">
-                      <label>Total USD</label>
+                      <label>Total USD</label><br>
                       <span >{{formato(2,(articulo.precio_usd)? (articulo.precio_usd  * articulo.CANTIDAD):0)}}</span>
 
                     </div>
                   </div>
                   <div class="col-12">
                     <label></label>
-                    <button type="button" class="btn btn-success" style="margin-top: 32px;" ng-click="addArtPedido();">Agregar</button>
+                    <button type="button" ng-disabled="productIndex!=-1" class="btn btn-success" style="margin-top: 32px;" ng-click="addArtPedido();">Agregar</button>
                   </div>
 
               </div>
