--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -388,7 +388,7 @@
                   </div>
                   <div class="col-12">
                     <label></label>
-                    <button type="button" ng-disabled="productIndex!=-1" class="btn btn-success" style="margin-top: 32px;" ng-click="addArtPedido();">Agregar</button>
+                    <button type="button" ng-disabled="productIndex==-1" class="btn btn-success" style="margin-top: 32px;" ng-click="addArtPedido();">Agregar</button>
                   </div>
 
               </div>
