--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -372,7 +372,7 @@
                   <button class="btn btn-outline-secondary"   ng-click="getProdNew(true)" type="button">Buscar</button>
                 </div>
               </div>
-              <div class="row" >
+              <div id="infoProduct" class="row" >
 
                   <div class="col-4">
                     <label>Codigo</label>
@@ -435,6 +435,7 @@
                   </thead>
                   <tbody>
                       <tr ng-repeat="x in productos" ng-click="selectProduct($index)" ng-class="{ selectedRow : $index == productIndex }" >
+                         <a href="#infoProduct">
                           <td><p class="text-center">{{ $index + 1 }}</p></td>
                           <td><p class="text-center">{{ x.nombre_producto }}</p></td>
                           <td><p class="text-center">{{ x.existencia }}</p></td>
@@ -444,6 +445,7 @@
                           <td><p class="text-right">{{  x.precioFormatUSD }}</p></td>
                           <td><p class="text-right">{{  x.iva_usd }}</p></td>
                           <td><p class="text-right">{{  x.proveedor }}</p></td>
+                          </a>
                       </tr>
 
                   </tbody>
