--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -158,7 +158,7 @@
                     </table>
 
               </div>
-              <div class="col-12 col-sm-12 col-md-12 col-lg-12" ng-show="productIndex != -1 ||pedido.pedido.length > 0">
+              <!-- <div class="col-12 col-sm-12 col-md-12 col-lg-12" ng-show="productIndex != -1 ||pedido.pedido.length > 0">
                 <div class="col-6 col-sm-6 col-md-6 col-lg-6">
                   <label>Total (no incluye iva)</label>
                   <h4>{{formato(2,totales.bolivares)}}</h4>
@@ -175,7 +175,32 @@
                   <label>Total USD (con iva)</label>
                   <h4>{{formato(3,totales.USDIVA)}}</h4>
                 </div>
-              </div>
+              </div> -->
+              <div class="d-flex flex-row-reverse bg-dark text-white p-4">
+                <div class="" ng-show="productIndex != -1 ||pedido.pedido.length > 0">
+
+                  <div class="py-3 px-5 text-right">
+                    <div class="mb-2">Total (no incluye iva)</div>
+                    <div class="h2 font-weight-light">{{formato(2,totales.bolivares)}}</div>
+                  </div>
+
+                  <div class="py-3 px-5 text-right">
+                    <div class="mb-2">Total (con iva)</div>
+                    <div class="h2 font-weight-light">{{formato(2,totales.bolivares + totales.bsIVA)}}</div>
+                  </div>
+
+                  <div class="py-3 px-5 text-right">
+                    <div class="mb-2">Total USD (no incluye iva)</div>
+                    <div class="h2 font-weight-light">{{formato(3,totales.USD)}}</div>
+                  </div>
+
+                  <div class="py-3 px-5 text-right">
+                    <div class="mb-2">Total USD (con iva)</div>
+                    <div class="h2 font-weight-light">{{formato(3,totales.USDIVA)}}</div>
+                  </div>
+
+                </div>
+            </div>
   <!--
               <div class="col-4 mb-5">
                 <label></label>
