--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -176,31 +176,41 @@
                   <h4>{{formato(3,totales.USDIVA)}}</h4>
                 </div>
               </div> -->
-              <div class="d-flex flex-row-reverse bg-dark text-white p-4">
-                <div class="" ng-show="productIndex != -1 ||pedido.pedido.length > 0">
-
-                  <div class="py-3 px-5 text-right">
-                    <div class="mb-2">Total (no incluye iva)</div>
-                    <div class="h2 font-weight-light">{{formato(2,totales.bolivares)}}</div>
-                  </div>
-
-                  <div class="py-3 px-5 text-right">
-                    <div class="mb-2">Total (con iva)</div>
-                    <div class="h2 font-weight-light">{{formato(2,totales.bolivares + totales.bsIVA)}}</div>
-                  </div>
-
-                  <div class="py-3 px-5 text-right">
-                    <div class="mb-2">Total USD (no incluye iva)</div>
-                    <div class="h2 font-weight-light">{{formato(3,totales.USD)}}</div>
-                  </div>
-
-                  <div class="py-3 px-5 text-right">
-                    <div class="mb-2">Total USD (con iva)</div>
-                    <div class="h2 font-weight-light">{{formato(3,totales.USDIVA)}}</div>
-                  </div>
-
-                </div>
-            </div>
+              <div class="row">
+                          <div class="col-lg-4 col-sm-5">
+                            </div>
+                              <div class="col-lg-4 col-sm-5 ml-auto">
+                                  <table class="table table-clear">
+                                      <tbody>
+                                          <tr>
+                                              <td class="left">
+                                                  <strong class="text-dark">Total (no incluye iva)</strong>
+                                              </td>
+                                              <td class="right">{{formato(2,totales.bolivares)}}</td>
+                                          </tr>
+                                          <tr>
+                                              <td class="left">
+                                                  <strong class="text-dark">Total (con iva)</strong>
+                                              </td>
+                                              <td class="right">{{formato(2,totales.bolivares + totales.bsIVA)}}</td>
+                                          </tr>
+                                          <tr>
+                                              <td class="left">
+                                                  <strong class="text-dark">Total USD (no incluye iva)</strong>
+                                              </td>
+                                              <td class="right">{{formato(3,totales.USD)}}</td>
+                                          </tr>
+                                          <tr>
+                                              <td class="left">
+                                                  <strong class="text-dark">Total USD (con iva)</strong> </td>
+                                              <td class="right">
+                                                  <strong class="text-dark">{{formato(3,totales.USDIVA)}}</strong>
+                                              </td>
+                                          </tr>
+                                      </tbody>
+                                  </table>
+                              </div>
+                          </div>
   <!--
               <div class="col-4 mb-5">
                 <label></label>
