--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -427,8 +427,80 @@
                     <button type="button" ng-disabled="productIndex==-1" class="btn btn-success" style="margin-top: 32px;" ng-click="addArtPedido();">Agregar</button>
                   </div>
 
+                  <div class="row">
+                    <div class="mt-3 col-sm-12 col-md-12 col-lg-12">
+
+                      <label>Precios</label>
+                    </div>
+                    <div class="col-3">
+                      <label>Por unidad Bs.S</label><br>
+                      <span >{{formato(2,(articulo.PRECIO)? articulo.PRECIO:0)}}</span>
+
+                    </div>
+                    <div class="col-3">
+                      <label>Total Bs.S</label><br>
+                      <span >{{formato(2,(articulo.PRECIO)? (articulo.PRECIO  * articulo.CANTIDAD):0)}}</span>
+
+                    </div>
+                    <div class="col-3">
+                      <label>Por unidad USD</label><br>
+                      <span >{{formato(2,(articulo.precio_usd)? articulo.precio_usd:0)}}</span>
+
+                    </div>
+                    <div class="col-3">
+                      <label>Total USD</label><br>
+                      <span >{{formato(2,(articulo.precio_usd)? (articulo.precio_usd  * articulo.CANTIDAD):0)}}</span>
+
+                    </div>
+                  </div>
+
               </div>
               <div ng-if="showProductTable" >
+                <table id="cart" class="table table-hover table-condensed">
+                          <thead>
+                          <tr>
+                            <th style="width:50%">Product</th>
+                            <th style="width:10%">Price</th>
+                            <th style="width:8%">Quantity</th>
+                            <th style="width:22%" class="text-center">Subtotal</th>
+                            <th style="width:10%"></th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td data-th="Product">
+                              <div class="row">
+                                <div class="col-sm-2 hidden-xs"><img src="http://placehold.it/100x100" alt="..." class="img-responsive"/></div>
+                                <div class="col-sm-10">
+                                  <h4 class="nomargin">Product 1</h4>
+                                  <p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet.</p>
+                                </div>
+                              </div>
+                            </td>
+                            <td data-th="Price">$150.00</td>
+                            <td data-th="Quantity">
+                              <input type="number" class="form-control text-center" value="1">
+                            </td>
+                            <td data-th="Subtotal" class="text-center">150.00</td>
+                            <td class="actions" data-th="">
+                              <button class="btn btn-info btn-sm"><i class="fa fa-refresh"></i></button>
+                              <button class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></button>
+                            </td>
+                          </tr>
+                        </tbody>
+                        <tfoot>
+                          <tr class="visible-xs">
+                            <td class="text-center"><strong>Total 1.99</strong></td>
+
+                          </tr>
+                          <tr>
+                            <td><a href="#" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
+                            <td colspan="2" class="hidden-xs"></td>
+                            <td class="hidden-xs text-center"><strong>Total $150.00</strong></td>
+                            <td><a href="https://www.paypal.com/webapps/shoppingcart?mfid=1546373779156_cb91e3a2b2dc7&flowlogging_id=cb91e3a2b2dc7#/checkout/shoppingCart" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
+                          </tr>
+                        </tfoot>
+                      </table>
                 <table datatable="ng" dt-options="dtOptionsProd"  class="table table-striped table-bordered" >
                   <thead>
                       <tr>
@@ -468,38 +540,13 @@
           </div>
         </div>
         <div class="modal-footer">
-          <div class="row">
-            <div class="mt-3 col-sm-12 col-md-12 col-lg-12">
 
-              <label>Precios</label>
-            </div>
-            <div class="col-3">
-              <label>Por unidad Bs.S</label><br>
-              <span >{{formato(2,(articulo.PRECIO)? articulo.PRECIO:0)}}</span>
-
-            </div>
-            <div class="col-3">
-              <label>Total Bs.S</label><br>
-              <span >{{formato(2,(articulo.PRECIO)? (articulo.PRECIO  * articulo.CANTIDAD):0)}}</span>
-
-            </div>
-            <div class="col-3">
-              <label>Por unidad USD</label><br>
-              <span >{{formato(2,(articulo.precio_usd)? articulo.precio_usd:0)}}</span>
-
-            </div>
-            <div class="col-3">
-              <label>Total USD</label><br>
-              <span >{{formato(2,(articulo.precio_usd)? (articulo.precio_usd  * articulo.CANTIDAD):0)}}</span>
-
-            </div>
-          </div>
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
         </div>
       </div>
     </div>
   </div>
-</div>
+
 
 <div class="modal fade" id="modalConfirm">
   <div class="modal-dialog">
