--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -12,15 +12,25 @@
         </button>
       </div>
       <div class="modal-body">
-        <!-- INFO CLIENTE -->
-        <header-client></header-client>
-        <!--  END INFO CLIENTE -->
+
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a class="nav-link " ng-class="{ active : tabsIndex == 0 }" ng-click="goToTab(0)" >Informacion Cliente</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" ng-class="{ active : tabsIndex == 1}" ng-click="goToTab(1)" >Detalle de pedido</a>
+            </li>
+          </ul>
+
+        
         <div class="">
 
           <form class="row col-sm-12 col-md-12 col-lg-12" >
 
-            <div class="container">
-
+            <div class="container" ng-if="tabsIndex == 0" >
+              <!-- INFO CLIENTE -->
+              <header-client></header-client>
+              <!--  END INFO CLIENTE -->
               <div ng-show="!hasUserClient">
                 <div class="row">
                   <div class="col-sm-12 col-md-6 col-lg-6">
@@ -111,7 +121,7 @@
             </div> -->
 
             </div>
-            <div class="container"   >
+            <div class="container" ng-if="tabsIndex == 1" >
               <div class="row" >
 
                   <div class="col-12">
@@ -122,7 +132,7 @@
               </div>
 
             </div>
-            <div class="container" style="margin-top: 32px;">
+            <div class="container" ng-if="tabsIndex == 1" style="margin-top: 32px;">
 
 
               <div class="form-group">
@@ -456,51 +466,7 @@
 
               </div>
               <div ng-if="showProductTable" >
-                <table id="cart" class="table table-hover table-condensed">
-                          <thead>
-                          <tr>
-                            <th style="width:50%">Product</th>
-                            <th style="width:10%">Price</th>
-                            <th style="width:8%">Quantity</th>
-                            <th style="width:22%" class="text-center">Subtotal</th>
-                            <th style="width:10%"></th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <td data-th="Product">
-                              <div class="row">
-                                <div class="col-sm-2 hidden-xs"><img src="http://placehold.it/100x100" alt="..." class="img-responsive"/></div>
-                                <div class="col-sm-10">
-                                  <h4 class="nomargin">Product 1</h4>
-                                  <p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet.</p>
-                                </div>
-                              </div>
-                            </td>
-                            <td data-th="Price">$150.00</td>
-                            <td data-th="Quantity">
-                              <input type="number" class="form-control text-center" value="1">
-                            </td>
-                            <td data-th="Subtotal" class="text-center">150.00</td>
-                            <td class="actions" data-th="">
-                              <button class="btn btn-info btn-sm"><i class="fa fa-refresh"></i></button>
-                              <button class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></button>
-                            </td>
-                          </tr>
-                        </tbody>
-                        <tfoot>
-                          <tr class="visible-xs">
-                            <td class="text-center"><strong>Total 1.99</strong></td>
 
-                          </tr>
-                          <tr>
-                            <td><a href="#" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
-                            <td colspan="2" class="hidden-xs"></td>
-                            <td class="hidden-xs text-center"><strong>Total $150.00</strong></td>
-                            <td><a href="https://www.paypal.com/webapps/shoppingcart?mfid=1546373779156_cb91e3a2b2dc7&flowlogging_id=cb91e3a2b2dc7#/checkout/shoppingCart" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
-                          </tr>
-                        </tfoot>
-                      </table>
                 <table datatable="ng" dt-options="dtOptionsProd"  class="table table-striped table-bordered" >
                   <thead>
                       <tr>
