--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -15,14 +15,14 @@
 
         <ul class="nav nav-tabs">
             <li class="nav-item">
-              <a class="nav-link " ng-class="{ active : tabsIndex == 0 }" ng-click="goToTab(0)" >Informacion Cliente</a>
+              <a class="nav-link " ng-class="{ active : tabsIndex == 0 }" ng-click="goToTab(0)" >Informacion Clientes <span class="badge badge-secondary">1</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" ng-class="{ active : tabsIndex == 1}" ng-click="goToTab(1)" >Detalle de pedido</a>
+              <a class="nav-link" ng-class="{ active : tabsIndex == 1}" ng-click="goToTab(1)" >Detalle de pedido <span class="badge badge-secondary">2</span></a>
             </li>
-          </ul>
+        </ul>
 
-        
+
         <div class="">
 
           <form class="row col-sm-12 col-md-12 col-lg-12" >
