--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -133,10 +133,10 @@
 
             </div>
             <div class="container" ng-if="tabsIndex == 1" style="margin-top: 32px;">
-              <div class="card">
+              <div class="order_card">
                   <div class="row">
-                      <div class="col-md-8 cart">
-                          <div class="title">
+                      <div class="col-md-8 order_cart">
+                          <div class="order_title">
                               <div class="row">
                                   <div class="col">
                                       <h4><b>Shopping Cart</b></h4>
@@ -158,7 +158,7 @@
 
                           <div class="back-to-shop"><a href="#">&leftarrow;</a><span class="text-muted">Back to shop</span></div>
                       </div>
-                      <div class="col-md-4 summary">
+                      <div class="col-md-4 order_summary">
                           <div>
                               <h5><b>Summary</b></h5>
                           </div>
@@ -176,7 +176,7 @@
                           <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
                               <div class="col">TOTAL PRICE</div>
                               <div class="col text-right">&euro; 137.00</div>
-                          </div> <button class="btn">CHECKOUT</button>
+                          </div> <button class="order_btn">CHECKOUT</button>
                       </div>
                   </div>
               </div>
